--- a/pairwise.ipynb
+++ b/pairwise.ipynb
@@ -2,19 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "f59f8943",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pickle\n",
     "import pandas as pd\n",
-    "from sklearn.metrics.pairwise import pairwise_distances"
+    "from scipy import sparse"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "bf761e93",
    "metadata": {},
    "outputs": [
@@ -22,17 +22,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      ",text,industry,cluster\n"
+      "text,industry,cluster\n",
+      "benefits board benefits board homejoin planning tab navigate menu items view account online member account portal provides access information state art security encryption join plan visit membership overview page learn minister retirement plan benefits board currently offering matching contributions new participants church loan fund low rates refinancing know signup subscribe nowcongrats subscribed knowconnect toll free local fax mail info benefitsboard com deposit funds make contribution deposits using secure electronic payment system enroll first time user know april final instructions passed away today would family know access important accounts files insurance policies even social media accounts current pandemic contributed hundreds thousands deaths people would likely lived much longer lives many unexpected deaths read church god benefits board cleveland privacy policy,marketing and advertising,0\n"
      ]
     }
    ],
    "source": [
-    "!head -n 1 data_filtered.csv\n"
+    "!head -n 2 sample_processed.csv\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "3cc7ed4f",
    "metadata": {},
    "outputs": [
@@ -57,7 +58,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
        "      <th>text</th>\n",
        "      <th>industry</th>\n",
        "      <th>cluster</th>\n",
@@ -66,127 +66,117 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0</td>\n",
        "      <td>benefits board benefits board homejoin plannin...</td>\n",
        "      <td>marketing and advertising</td>\n",
-       "      <td>3</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1</td>\n",
        "      <td>home columbia landcare environmental stewardsh...</td>\n",
        "      <td>environmental services</td>\n",
        "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2</td>\n",
        "      <td>region inc worldwide revenue accelerating worl...</td>\n",
        "      <td>management consulting</td>\n",
-       "      <td>2</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>3</td>\n",
        "      <td>home team careers services civil design case s...</td>\n",
        "      <td>civil engineering</td>\n",
        "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>4</td>\n",
        "      <td>home friedman associates friedman associates c...</td>\n",
        "      <td>accounting</td>\n",
-       "      <td>2</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>5</td>\n",
        "      <td>big rapids real estate search houses homes sal...</td>\n",
        "      <td>real estate</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>6</td>\n",
        "      <td>garcia law firm garcia law firm home attorney ...</td>\n",
        "      <td>legal services</td>\n",
-       "      <td>2</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>7</td>\n",
-       "      <td>advfn free stock cryptocurrency prices charts ...</td>\n",
-       "      <td>internet</td>\n",
-       "      <td>3</td>\n",
+       "      <td>guardian athletics kato collar invest online s...</td>\n",
+       "      <td>sports</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>8</td>\n",
-       "      <td>guardian athletics kato collar invest online s...</td>\n",
-       "      <td>sports</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>9</td>\n",
        "      <td>miracle doors america premier door service com...</td>\n",
        "      <td>utilities</td>\n",
        "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>valerion biotechnology company focused develop...</td>\n",
+       "      <td>biotechnology</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Unnamed: 0                                               text  \\\n",
-       "0           0  benefits board benefits board homejoin plannin...   \n",
-       "1           1  home columbia landcare environmental stewardsh...   \n",
-       "2           2  region inc worldwide revenue accelerating worl...   \n",
-       "3           3  home team careers services civil design case s...   \n",
-       "4           4  home friedman associates friedman associates c...   \n",
-       "5           5  big rapids real estate search houses homes sal...   \n",
-       "6           6  garcia law firm garcia law firm home attorney ...   \n",
-       "7           7  advfn free stock cryptocurrency prices charts ...   \n",
-       "8           8  guardian athletics kato collar invest online s...   \n",
-       "9           9  miracle doors america premier door service com...   \n",
+       "                                                text  \\\n",
+       "0  benefits board benefits board homejoin plannin...   \n",
+       "1  home columbia landcare environmental stewardsh...   \n",
+       "2  region inc worldwide revenue accelerating worl...   \n",
+       "3  home team careers services civil design case s...   \n",
+       "4  home friedman associates friedman associates c...   \n",
+       "5  big rapids real estate search houses homes sal...   \n",
+       "6  garcia law firm garcia law firm home attorney ...   \n",
+       "7  guardian athletics kato collar invest online s...   \n",
+       "8  miracle doors america premier door service com...   \n",
+       "9  valerion biotechnology company focused develop...   \n",
        "\n",
        "                    industry  cluster  \n",
-       "0  marketing and advertising        3  \n",
+       "0  marketing and advertising        0  \n",
        "1     environmental services        4  \n",
-       "2      management consulting        2  \n",
+       "2      management consulting        3  \n",
        "3          civil engineering        4  \n",
-       "4                 accounting        2  \n",
+       "4                 accounting        3  \n",
        "5                real estate        3  \n",
-       "6             legal services        2  \n",
-       "7                   internet        3  \n",
-       "8                     sports        3  \n",
-       "9                  utilities        4  "
+       "6             legal services        3  \n",
+       "7                     sports        0  \n",
+       "8                  utilities        4  \n",
+       "9              biotechnology        0  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data = pd.read_csv('data_filtered.csv')\n",
+    "data = pd.read_csv('sample_processed.csv')\n",
     "data.head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "72a77a06",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1694586, 8088615)"
+       "(215160, 1611989)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,24 +190,155 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "d738714a",
+   "execution_count": 8,
+   "id": "7c9c76f9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<3x8088615 sparse matrix of type '<class 'numpy.float64'>'\n",
-       "\twith 632 stored elements in Compressed Sparse Row format>"
+       "0.016355522371438964"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "vectors[[1,4,5]]"
+    "def cosine(x:sparse.spmatrix,y: sparse.spmatrix):\n",
+    "    return x.multiply(y).sum() / (x.dot(x.T).sqrt().sum() * y.dot(y.T).sqrt().sum())\n",
+    "\n",
+    "cosine(vectors[5], vectors[7])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d738714a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_df = data[data['cluster'] == 0]\n",
+    "\n",
+    "pairs = (\n",
+    "    (i1, i2) \n",
+    "    for i1, x1 in _df.iterrows() \n",
+    "    for i2, x2 in _df.iterrows() \n",
+    "    if i1 < i2 and x1.industry != x2.industry\n",
+    ")\n",
+    "\n",
+    "for t in range(2):\n",
+    "    print('---')\n",
+    "    i,j = next(pairs)\n",
+    "    print((i,j,cosine(vectors[i], vectors[j])))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "6929477b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import threading\n",
+    "\n",
+    "# _df = data[data['cluster'] == 0]\n",
+    "\n",
+    "# pairs = (\n",
+    "#     (i1, i2) \n",
+    "#     for i1, x1 in _df.iterrows() \n",
+    "#     for i2, x2 in _df.iterrows() \n",
+    "#     if i1 < i2 and x1.industry != x2.industry\n",
+    "# )\n",
+    "\n",
+    "# for t in range(2):\n",
+    "#     print('---')\n",
+    "#     i,j = next(pairs)\n",
+    "#     print((i,j,cosine(vectors[i], vectors[j])))\n",
+    "\n",
+    "class ClusterPairwiseSimilarityThread(threading.Thread):\n",
+    "    def __init__(self, df, cluster_id, vectors, output_file) -> None:\n",
+    "        threading.Thread.__init__(self)\n",
+    "        assert 'cluster' in df.columns\n",
+    "        assert 'industry' in df.columns\n",
+    "        self.df = df\n",
+    "        self.vectors = vectors\n",
+    "        self.cluster_id = cluster_id\n",
+    "        self.output_file = output_file\n",
+    "    \n",
+    "    def __get_pairs(self):\n",
+    "        _df = self.df[self.df.cluster == self.cluster_id]\n",
+    "        return (\n",
+    "            (i1, i2) \n",
+    "            for i1, x1 in _df.iterrows() \n",
+    "            for i2, x2 in _df.iterrows() \n",
+    "            if i1 < i2 and x1.industry != x2.industry\n",
+    "        )\n",
+    "\n",
+    "    def run(self):\n",
+    "        print('Calculating pairwise cosine similarity for cluster ' + str(self.cluster_id))\n",
+    "        with open(self.output_file, 'w') as out:\n",
+    "            for i,j in self.__get_pairs():\n",
+    "                out.write(f'{i},{j},{cosine(self.vectors[i], self.vectors[j])}\\n')\n",
+    "        print('Finished cluster ' + str(self.cluster_id))\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "221aff5a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "threads = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "e3b7a201",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Calculating pairwise cosine similarity for cluster 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "t = ClusterPairwiseSimilarityThread(data, 0, vectors, 'cluster_0_similarities.txt')\n",
+    "t.start()\n",
+    "threads.append(t)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "0a9d2a2a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Calculating pairwise cosine similarity for cluster 4\n",
+      "Calculating pairwise cosine similarity for cluster 3\n",
+      "Calculating pairwise cosine similarity for cluster 2\n",
+      "Calculating pairwise cosine similarity for cluster 1\n",
+      "Calculating pairwise cosine similarity for cluster 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "for c in data.cluster.unique():\n",
+    "    if c != 0: # DELETE ME\n",
+    "        t = ClusterPairwiseSimilarityThread(data, c, vectors, f'cluster_{c}_similarities.txt')\n",
+    "        t.start()\n",
+    "        threads.append(t)"
    ]
   },
   {
