--- a/pairwise.ipynb
+++ b/pairwise.ipynb
@@ -2,14 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "f59f8943",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pickle\n",
     "import pandas as pd\n",
-    "from scipy import sparse"
+    "from scipy import sparse\n",
+    "from scipy.spatial import distance\n"
    ]
   },
   {
@@ -33,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "3cc7ed4f",
    "metadata": {},
    "outputs": [
@@ -154,7 +155,7 @@
        "9              biotechnology        0  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "72a77a06",
    "metadata": {},
    "outputs": [
@@ -176,7 +177,7 @@
        "(215160, 1611989)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,26 +191,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 35,
    "id": "7c9c76f9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "64.4 ms ± 1.68 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit\n",
+    "def cosine1(x:sparse.spmatrix,y: sparse.spmatrix):\n",
+    "    return x.multiply(y).sum() / (x.dot(x.T).sqrt().sum() * y.dot(y.T).sqrt().sum())\n",
+    "\n",
+    "for i in range(4):\n",
+    "    cosine1(vectors[i], vectors[i+2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "c26e46f8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "33.6 ms ± 396 µs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit\n",
+    "def cosine2(x:sparse.spmatrix,y: sparse.spmatrix):\n",
+    "    return x.dot(y.T).sum() / (x.dot(x.T).sqrt().sum() * y.dot(y.T).sqrt().sum())\n",
+    "\n",
+    "for i in range(4):\n",
+    "    cosine2(vectors[i], vectors[i+1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "8b2edcdd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "35.5 ms ± 1.99 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit\n",
+    "def cosine3(x:sparse.spmatrix,y: sparse.spmatrix):\n",
+    "    return (x * y.T).sum() / ((x * x.T) * (y * y.T)).sqrt().sum()\n",
+    "\n",
+    "for i in range(4):\n",
+    "    cosine3(vectors[i], vectors[i+1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.016355522371438964"
+       "<1x1 sparse matrix of type '<class 'numpy.float64'>'\n",
+       "\twith 1 stored elements in Compressed Sparse Row format>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def cosine(x:sparse.spmatrix,y: sparse.spmatrix):\n",
-    "    return x.multiply(y).sum() / (x.dot(x.T).sqrt().sum() * y.dot(y.T).sqrt().sum())\n",
-    "\n",
-    "cosine(vectors[5], vectors[7])"
+    "x = vectors[5]\n",
+    "x * x.T"
    ]
   },
   {
@@ -339,6 +407,28 @@
     "        t = ClusterPairwiseSimilarityThread(data, c, vectors, f'cluster_{c}_similarities.txt')\n",
     "        t.start()\n",
     "        threads.append(t)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "7206a23b",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'threads' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-edff74bd30ee>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;34m[\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mis_alive\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mthreads\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'threads' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "[x.is_alive() for x in threads]"
    ]
   },
   {
