--- a/industry_graph.ipynb
+++ b/industry_graph.ipynb
@@ -1158,7 +1158,7 @@
     "with open('industry_map_edges.txt', 'w') as f:\n",
     "    for edge, w in edges.items():\n",
     "        f.write(f'{edge[0]},{edge[1]},{w}\\n')\n",
-    "edges\n"
+    "edges"
    ]
   },
   {
