--- a/pairwise.ipynb
+++ b/pairwise.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "42d556c4",
    "metadata": {},
    "outputs": [],
@@ -10,17 +10,44 @@
     "import pickle\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from pysparnn.cluster_index import ClusterIndex"
+    "from pysparnn.cluster_index import ClusterIndex\n",
+    "from scipy import sparse"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "7134b325",
    "metadata": {},
    "outputs": [],
    "source": [
     "vectors = pickle.load(open('vectors.pkl','rb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "884e0f35",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.016286237609227754"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%timeit\n",
+    "def cosine(x:sparse.spmatrix,y: sparse.spmatrix):\n",
+    "    return x.multiply(y).sum() / (x.dot(x.T).sqrt().sum() * y.dot(y.T).sqrt().sum())\n",
+    "\n",
+    "for i in range(3):\n",
+    "    cosine(vectors[5], vectors[5+i])"
    ]
   },
   {
