--- a/industry_graph.ipynb
+++ b/industry_graph.ipynb
@@ -2350,7 +2350,7 @@
    "source": [
     "plt.figure(figsize=(12,8))\n",
     "nx.draw(graph, with_labels=True)\n",
-    "plt.savefig('raw_industry_map.png')"
+    "plt.savefig('img/raw_industry_map.png')"
    ]
   },
   {
@@ -2616,7 +2616,7 @@
     "plt.figure(figsize=(15,10))\n",
     "pos = nx.spring_layout(industry_diagraph, k=5)\n",
     "nx.draw_networkx(industry_diagraph, pos=pos, node_size=100, font_size=10, arrowsize=13)\n",
-    "plt.savefig('diagraph.png')"
+    "plt.savefig('img/diagraph.png')"
    ]
   },
   {
@@ -2646,7 +2646,7 @@
     "nx.draw_networkx(subgraph, pos=pos, node_size=40, arrowsize=15, with_labels=False)\n",
     "pos_labels = {x:(y[0], y[1]+0.03) for x,y in pos.items()}\n",
     "nx.draw_networkx_labels(subgraph, pos=pos_labels, font_size=12, font_weight='bold')\n",
-    "plt.savefig('computer_software_subnet.png')"
+    "plt.savefig('img/computer_software_subnet.png')"
    ]
   },
   {
